# MyEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  premake5inc.lua
Bullet/: BulletCollision.vcxproj  BulletDynamics.vcxproj  LinearMath.vcxproj
DataEngine/: EngineGameObjects.mytemplate
DataEngine/Fonts/: Nevis60.fnt
DataEngine/Materials/: HeightmapBrush.mymaterial  Nevis60.mymaterial
DataEngine/Meshes/: sphere.obj.mymesh
DataEngine/Shaders/: HeightmapBrush.glsl  Shader_ClipSpaceColor.glsl  Shader_ClipSpaceTexture.glsl  Shader_Deferred.glsl  Shader_Deferred_AmbientDirectional.glsl  Shader_Deferred_PointLight.glsl  Shader_FresnelTint.glsl  Shader_SelectedObjects.glsl  Shader_Texture.glsl  Shader_TextureTint.glsl  Shader_TextureTintDiscard.glsl  Shader_TintColor.glsl  Shader_TintColorWithAlpha.glsl
DataEngine/Shaders/Include/: Bone_AttribsAndUniforms.glsl  Bone_Functions.glsl  DepthBuffer_Functions.glsl  LSVaryings.glsl  LSVaryings_Functions.glsl  Light_Functions.glsl  Light_Uniforms.glsl  WSVaryings.glsl  WSVaryings_Functions.glsl
DataEngineSource/C#/: ComponentMesh.cs  ComponentMeshPrimitive.cs  ComponentSystemManager.cs  ComponentTransform.cs  GameObject.cs  Log.cs  MaterialDefinition.cs  Matrix.cs  MyNativeObject.cs  MyScriptInterface.cs  Vector.cs
DataEngineSource/C#/BaseComponents/: ComponentBase.cs  ComponentMesh.cs  ComponentTransform.cs
DataEngineSource/C#/Core/: ComponentSystemManager.cs  EngineCore.cs  GameObject.cs
DataEngineSource/C#/Framework/: Log.cs  MaterialManager.cs  Matrix.cs  MyMaterial.cs  Vector.cs
EntityComponentTest.xcworkspace/: contents.xcworkspacedata
GameEntityComponentTest/: EntityComponentTest.sln  EntityComponentTest2013.sln
GameEntityComponentTest/EntityComponentTest.xcworkspace/: contents.xcworkspacedata
GameEntityComponentTest/EntityComponentTest.xcworkspace/xcshareddata/: EntityComponentTest.xccheckout
GameEntityComponentTest/Game/: EntityComponentTest.vcxproj  EntityComponentTest.vcxproj.filters  EntityComponentTest2013.vcxproj
GameEntityComponentTest/Game/EntityComponentTest.xcodeproj/: project.pbxproj
GameEntityComponentTest/Game/SourceAndroid/: main.cpp  main.h
GameEntityComponentTest/Game/SourceBlackBerry/: .cproject  .project  bar-descriptor.xml
GameEntityComponentTest/Game/SourceCommon/: GameCommonHeader.cpp  GameCommonHeader.h
GameEntityComponentTest/Game/SourceEmscripten/: emMain.cpp  esUtil.c  esUtil.h  httpd_Debug.py  httpd_Release.py
GameEntityComponentTest/Game/SourceIOS/: EntityComponentTest-Info.plist  main.h  main.mm
GameEntityComponentTest/Game/SourceNaCL/: MainModule.cpp
GameEntityComponentTest/Game/SourceWP8/: CubeRenderer.cpp  CubeRenderer.h  Direct3DBase.cpp  Direct3DBase.h  DirectXHelper.h  WP8Main.cpp  WP8Main.h
GameEntityComponentTest/Game/SourceWindows/: WinMain.cpp  WinMain.h  WinMainWx.cpp  WinMainWx.h
Libraries/: BulletCollision.vcxproj  BulletDynamics.vcxproj  LinearMath.vcxproj  premake5inc-bullet.lua
Libraries/Bullet/: BulletCollision.vcxproj  BulletDynamics.vcxproj  LinearMath.vcxproj
Libraries/BulletCollision.xcodeproj/: project.pbxproj
Libraries/BulletDynamics.xcodeproj/: project.pbxproj
Libraries/LinearMath.xcodeproj/: project.pbxproj
Libraries/Lua/src/: lmathlib.c  loslib.c  luaconf.h
Libraries/SharedGameCode/: SharedCommonHeader.cpp  SharedCommonHeader.h  SharedGameCode.vcxproj  SharedGameCode.vcxproj.filters  premake5inc.lua
Libraries/SharedGameCode/SharedGameCode.xcodeproj/: project.pbxproj
Lua/src/: lprefix.h
MyEngine/: EntityComponentTest.vcxproj  EntityComponentTest.vcxproj.filters  MyEngine.vcxproj  MyEngine.vcxproj.filters  premake5inc.lua
MyEngine/EntityComponentTest.xcodeproj/: project.pbxproj
MyEngine/EntityComponentTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MyEngine/MyEngine.xcodeproj/: project.pbxproj
MyEngine/SourceCommon/: EngineCommonHeader.cpp  EngineCommonHeader.h  MyEngine.h  MyEnginePCH.cpp  MyEnginePCH.h
MyEngine/SourceCommon/Camera/: Camera2D.cpp  Camera2D.h  Camera3D.cpp  Camera3D.h
MyEngine/SourceCommon/ComponentSystem/: ComponentTemplate.cpp  ComponentTemplate.h
MyEngine/SourceCommon/Core/: BulletWorld.cpp  BulletWorld.h  EditorState.cpp  EditorState.h  EngineComponentTypeManager.cpp  EngineComponentTypeManager.h  EngineCore.cpp  EngineCore.h  EngineMainFrame.cpp  EngineMainFrame.h  GameComponentTypeManager.cpp  GameEntityComponentTest.cpp  GameEntityComponentTest.h  GameMainFrame.cpp  GameMainFrame.h  InputFinger.cpp  InputFinger.h  LuaGLFunctions.cpp  LuaGLFunctions.h  LuaGameState.cpp  LuaGameState.h  LuaSnippets.txt  MonoGameState.cpp  MonoGameState.h
MyEngine/SourceCommon/Editor/: EngineCommandStack.cpp  EngineCommandStack.h  EngineEditorCommands.cpp  EngineEditorCommands.h  EngineMainFrame.cpp  EngineMainFrame.h  GameCommandStack.cpp  GameEditorCommands.cpp  GameObjectTemplateManager.cpp  GameObjectTemplateManager.h  TransformGizmo.cpp  TransformGizmo.h
MyEngine/SourceCommon/GUI/: EditorIcons.h  ImGuiConfig.h  ImGuiExtensions.cpp  ImGuiExtensions.h  ImGuiManager.cpp  ImGuiManager.h
MyEngine/SourceCommon/GameComponents/: ComponentAIChasePlayer.cpp  ComponentAIChasePlayer.h  ComponentCollisionObject.cpp  ComponentInputTrackMousePos.cpp  ComponentLuaScript.cpp
MyEngine/SourceCommon/Mono/: MonoGameState.h  (+5 more)
MyEngine/SourceEditor/: DragAndDropHackeryExtended.h  EditorImGuiMainFrame.cpp  EditorImGuiMainFrame.h  EditorMainFrame.cpp  EditorMainFrame.h  EditorMainFrame_ImGui.cpp  EditorMainFrame_ImGui.h  EditorMainFrame_Wx.cpp  EditorMainFrame_Wx.h  EditorMenuCommands.cpp  EditorMenuCommands.h  EditorPrefs.cpp  EditorPrefs.h  EditorState.cpp  EditorState.h  EngineCommandStack.cpp  EngineEditorCommands.cpp  EngineEditorCommands.h  EngineMainFrame.cpp  EngineMainFrame.h  GameObjectTemplateManager.cpp  TransformGizmo.cpp  TransformGizmo.h
VSCode-MyEngineLua/: .vscodeignore  BuildVSIX.bat  CHANGELOG.md  README.md  package.json
VSCode-MyEngineLua/snippets/: snippets.json
VSCode-MyEngineLua/source/: MyEngineLuaDebug.ts  MyEngineLuaRuntime.ts  debugAdapter.ts  extension.ts
(+360 files in other folders)
